--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Foodrawing
 server.servlet.context-path=/
+spring.config.import=optional:application-secrets.properties
 server.port=9093
 server.servlet.encoding.force=true
 spring.jpa.database=oracle
@@ -8,16 +9,16 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=trace
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.mvc.view.prefix = /WEB-INF/views/
-spring.mvc.view.suffix = .jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 server.servlet.jsp.init-parameters.development = true
+logging.level.org.springframework.security=DEBUG
 
 # datasource 설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=foodrawing
 spring.datasource.password=1234
-
 
 # mapper.xml 경로 설정
 mybatis.mapper-locations:classpath:mapper/**/*Mapper.xml
@@ -26,3 +27,32 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # file 설정
 file.upload-dir=C:/dev/
 spring.web.resources.static-locations=file:/C:/dev/,classpath:/static/,classpath:/public/
+
+## 네이버 로그인 설정
+spring.security.oauth2.client.registration.naver.client-id=QefAvf5biK3OBWxh0kNj
+spring.security.oauth2.client.registration.naver.client-secret=SdMrj9SHcK
+spring.security.oauth2.client.registration.naver.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.scope=name,email,nickname,gender,birthyear,mobile,birthday
+spring.security.oauth2.client.registration.naver.client-name=Naver
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+# 카카오 로그인 설정
+spring.security.oauth2.client.registration.kakao.client-id=b45a03f986eb48e20c776be95d860332
+spring.security.oauth2.client.registration.kakao.client-secret=YJgyiy8lErzI2yxJf7vhaZykXWJMSoss
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+server.servlet.session.timeout=30m
+spring.session.store-type=none
